@@ -701,6 +701,28 @@ Please remember that in this mode the helper opens with <tt><%</tt> instead of <
 
 The default value for <tt>:show_filters</tt> can be changed in <tt>config/initializers/wice_grid_config.rb</tt>.
 
+=== Action Column
+
+It is easy to add a column with checkboxes for each record. This is useful for actions with multiple records,
+for example, deleting selected records. Please note that +action_column+ only creates the checkboxes and the 
+'Select All' and 'Deselect All' buttons, and the form itself as well as processing the parameters should be 
+taken care of by the application code.
+
+  <%= grid(@tasks_grid, :show_filters => :always) do |g|
+
+    ...
+  
+    g.action_column
+
+    ...
+  
+  end -%>
+
+By default the name of the HTTP parameter follows pattern <tt>"#{grid_name}[#{param_name}][]"</tt>, thus
+<tt>params[grid_name][param_name]</tt> will contain an array of object IDs.
+
+See the documentation for more details.
+
 
 === Integration of the grid with other forms on page
 
